src/snapshots/rlox__test_runtime__scoped_recursion.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            fun foo(n) {\n                if n == 0 {\n                    return 0;\n                } else {\n                    return 1 + foo(n - 1);\n                }\n            }\n            print foo(1);\n        }\n        \")"
---
stdout:
1


stderr:


